Correct (alphabetic) order of authors; added Lasagne to bibtex file

--- a/pixel-wise-street-segmentation.bib
+++ b/pixel-wise-street-segmentation.bib
@@ -2,6 +2,15 @@
 % Encoding: UTF-8
 
 
+@InProceedings{aly2008real,
+  Title                    = {Real time detection of lane markers in urban streets},
+  Author                   = {Aly, Mohamed},
+  Booktitle                = {Intelligent Vehicles Symposium, 2008 IEEE},
+  Year                     = {2008},
+  Organization             = {IEEE},
+  Pages                    = {7--12}
+}
+
 @Misc{Bastien2012,
   Title                    = {Theano: new features and speed improvements},
 
@@ -48,6 +57,39 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   Url                      = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.22.5731}
 }
 
+@Misc{sander_dieleman_2015_27878,
+  Title                    = {Lasagne: First release.},
+
+  Author                   = {Sander Dieleman and
+ Jan Schlüter and
+ Colin Raffel and
+ Eben Olson and
+ Søren Kaae Sønderby and
+ Daniel Nouri and
+ Daniel Maturana and
+ Martin Thoma and
+ Eric Battenberg and
+ Jack Kelly and
+ Jeffrey De Fauw and
+ Michael Heilman and
+ diogo149 and
+ Brian McFee and
+ Hendrik Weideman and
+ takacsg84 and
+ peterderivaz and
+ Jon and
+ instagibbs and
+ Dr. Kashif Rasul and
+ CongLiu and
+ Britefury and
+ Jonas Degrave},
+  Month                    = aug,
+  Year                     = {2015},
+
+  Doi                      = {10.5281/zenodo.27878},
+  Url                      = {http://dx.doi.org/10.5281/zenodo.27878}
+}
+
 @InProceedings{Fritsch2013,
   Title                    = {A New Performance Measure and Evaluation Benchmark for Road Detection Algorithms},
   Author                   = {Jannik Fritsch and Tobias Kuehnl and Andreas Geiger},
@@ -59,6 +101,23 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   Timestamp                = {2015.07.23}
 }
 
+@Article{6182716,
+  Title                    = {Robust Road Detection and Tracking in Challenging Scenarios Based on Markov Random Fields With Unsupervised Learning},
+  Author                   = {Chunzhao Guo and Mita, S. and McAllester, D.},
+  Journal                  = {Intelligent Transportation Systems, IEEE Transactions on},
+  Year                     = {2012},
+
+  Month                    = {Sept},
+  Number                   = {3},
+  Pages                    = {1338-1354},
+  Volume                   = {13},
+
+  Abstract                 = {This paper presents a robust stereo-vision-based drivable road detection and tracking system that was designed to navigate an intelligent vehicle through challenging traffic scenarios and increment road safety in such scenarios with advanced driver-assistance systems (ADAS). This system is based on a formulation of stereo with homography as a maximum a posteriori (MAP) problem in a Markov random held (MRF). Under this formulation, we develop an alternating optimization algorithm that alternates between computing the binary labeling for road/nonroad classification and learning the optimal parameters from the current input stereo pair itself. Furthermore, online extrinsic camera parameter reestimation and automatic MRF parameter tuning are performed to enhance the robustness and accuracy of the proposed system. In the experiments, the system was tested on our experimental intelligent vehicles under various real challenging scenarios. The results have substantiated the effectiveness and the robustness of the proposed system with respect to various challenging road scenarios such as heterogeneous road materials/textures, heavy shadows, changing illumination and weather conditions, and dynamic vehicle movements.},
+  Doi                      = {10.1109/TITS.2012.2187896},
+  ISSN                     = {1524-9050},
+  Keywords                 = {Markov processes;automated highways;cameras;driver information systems;image classification;maximum likelihood estimation;object detection;object tracking;parameter estimation;road safety;road traffic;stereo image processing;unsupervised learning;ADAS;MAP problem;Markov random fields;advanced driver-assistance systems;automatic MRF parameter tuning;binary labeling;changing illumination;dynamic vehicle movements;heavy shadows;heterogeneous road materials;intelligent vehicle;maximum a posteriori problem;online extrinsic camera parameter reestimation;optimization algorithm;road safety;road textures;road tracking;road-nonroad classification;robust stereo-vision-based drivable road detection;traffic scenarios;unsupervised learning;weather conditions;Feature extraction;Intelligent vehicles;Markov random fields;Robustness;Stereo vision;Unsupervised learning;Advanced driver-assistance systems (ADASs);Markov random fields (MRFs);intelligent vehicles;road detection;stereo vision;unsupervised learning}
+}
+
 @Article{Jia2014,
   Title                    = {Caffe: Convolutional Architecture for Fast Feature Embedding},
   Author                   = {Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
@@ -67,6 +126,49 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
 
   Owner                    = {Martin Thoma},
   Timestamp                = {2015.07.23}
+}
+
+@InProceedings{krizhevsky2012imagenet,
+  Title                    = {Imagenet classification with deep convolutional neural networks},
+  Author                   = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
+  Booktitle                = {Advances in neural information processing systems},
+  Year                     = {2012},
+  Pages                    = {1097--1105}
+}
+
+@Article{long2014fully,
+  Title                    = {Fully convolutional networks for semantic segmentation},
+  Author                   = {Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
+  Journal                  = {arXiv preprint arXiv:1411.4038},
+  Year                     = {2014}
+}
+
+@Article{mohan2014deep,
+  Title                    = {Deep Deconvolutional Networks for Scene Parsing},
+  Author                   = {Mohan, Rahul},
+  Journal                  = {arXiv preprint arXiv:1411.4101},
+  Year                     = {2014}
+}
+
+@Article{SzegedyLJSRAEVR14,
+  Title                    = {Going Deeper with Convolutions},
+  Author                   = {Christian Szegedy and
+ Wei Liu and
+ Yangqing Jia and
+ Pierre Sermanet and
+ Scott Reed and
+ Dragomir Anguelov and
+ Dumitru Erhan and
+ Vincent Vanhoucke and
+ Andrew Rabinovich},
+  Journal                  = {CoRR},
+  Year                     = {2014},
+  Volume                   = {abs/1409.4842},
+
+  Bibsource                = {dblp computer science bibliography, http://dblp.org},
+  Biburl                   = {http://dblp.uni-trier.de/rec/bib/journals/corr/SzegedyLJSRAEVR14},
+  Timestamp                = {Wed, 01 Oct 2014 15:00:05 +0200},
+  Url                      = {http://arxiv.org/abs/1409.4842}
 }
 
 @InProceedings{Tarel2009,
@@ -87,67 +189,3 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   Url                      = {http://ieeexplore.ieee.org/xpl/login.jsp?tp=&arnumber=5164245&url=http%3A%2F%2Fieeexplore.ieee.org%2Fxpls%2Fabs_all.jsp%3Farnumber%3D5164245}
 }
 
-@article{long2014fully,
-  title={Fully convolutional networks for semantic segmentation},
-  author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
-  journal={arXiv preprint arXiv:1411.4038},
-  year={2014}
-}
-
-@article{mohan2014deep,
-  title={Deep Deconvolutional Networks for Scene Parsing},
-  author={Mohan, Rahul},
-  journal={arXiv preprint arXiv:1411.4101},
-  year={2014}
-}
-
-@inproceedings{aly2008real,
-  title={Real time detection of lane markers in urban streets},
-  author={Aly, Mohamed},
-  booktitle={Intelligent Vehicles Symposium, 2008 IEEE},
-  pages={7--12},
-  year={2008},
-  organization={IEEE}
-}
-
-@inproceedings{krizhevsky2012imagenet,
-  title={Imagenet classification with deep convolutional neural networks},
-  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-  booktitle={Advances in neural information processing systems},
-  pages={1097--1105},
-  year={2012}
-}
-
-@article{SzegedyLJSRAEVR14,
-  author    = {Christian Szegedy and
-               Wei Liu and
-               Yangqing Jia and
-               Pierre Sermanet and
-               Scott Reed and
-               Dragomir Anguelov and
-               Dumitru Erhan and
-               Vincent Vanhoucke and
-               Andrew Rabinovich},
-  title     = {Going Deeper with Convolutions},
-  journal   = {CoRR},
-  volume    = {abs/1409.4842},
-  year      = {2014},
-  url       = {http://arxiv.org/abs/1409.4842},
-  timestamp = {Wed, 01 Oct 2014 15:00:05 +0200},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/SzegedyLJSRAEVR14},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
-}
-
-@ARTICLE{6182716, 
-author={Chunzhao Guo and Mita, S. and McAllester, D.}, 
-journal={Intelligent Transportation Systems, IEEE Transactions on}, 
-title={Robust Road Detection and Tracking in Challenging Scenarios Based on Markov Random Fields With Unsupervised Learning}, 
-year={2012}, 
-volume={13}, 
-number={3}, 
-pages={1338-1354}, 
-abstract={This paper presents a robust stereo-vision-based drivable road detection and tracking system that was designed to navigate an intelligent vehicle through challenging traffic scenarios and increment road safety in such scenarios with advanced driver-assistance systems (ADAS). This system is based on a formulation of stereo with homography as a maximum a posteriori (MAP) problem in a Markov random held (MRF). Under this formulation, we develop an alternating optimization algorithm that alternates between computing the binary labeling for road/nonroad classification and learning the optimal parameters from the current input stereo pair itself. Furthermore, online extrinsic camera parameter reestimation and automatic MRF parameter tuning are performed to enhance the robustness and accuracy of the proposed system. In the experiments, the system was tested on our experimental intelligent vehicles under various real challenging scenarios. The results have substantiated the effectiveness and the robustness of the proposed system with respect to various challenging road scenarios such as heterogeneous road materials/textures, heavy shadows, changing illumination and weather conditions, and dynamic vehicle movements.}, 
-keywords={Markov processes;automated highways;cameras;driver information systems;image classification;maximum likelihood estimation;object detection;object tracking;parameter estimation;road safety;road traffic;stereo image processing;unsupervised learning;ADAS;MAP problem;Markov random fields;advanced driver-assistance systems;automatic MRF parameter tuning;binary labeling;changing illumination;dynamic vehicle movements;heavy shadows;heterogeneous road materials;intelligent vehicle;maximum a posteriori problem;online extrinsic camera parameter reestimation;optimization algorithm;road safety;road textures;road tracking;road-nonroad classification;robust stereo-vision-based drivable road detection;traffic scenarios;unsupervised learning;weather conditions;Feature extraction;Intelligent vehicles;Markov random fields;Robustness;Stereo vision;Unsupervised learning;Advanced driver-assistance systems (ADASs);Markov random fields (MRFs);intelligent vehicles;road detection;stereo vision;unsupervised learning}, 
-doi={10.1109/TITS.2012.2187896}, 
-ISSN={1524-9050}, 
-month={Sept},}
