--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -39,10 +39,10 @@
 \makeglossaries
 
 \title{Pixel-wise Segmentation of Street with Neural Networks}
-\author{Martin Thoma, Marvin Teichmann, Sebastian Bittel, Vitali Kaiser}
+\author{Sebastian Bittel, Vitali Kaiser, Marvin Teichmann, Martin Thoma}
 
 \hypersetup{
-	pdfauthor   = {Martin Thoma\sep Marvin Teichmann\sep Sebastian Bittel\sep Vitali Kaiser},
+	pdfauthor   = {Sebastian Bittel\sep Vitali Kaiser\sep Marvin Teichmann\sep Martin Thoma},
 	pdfkeywords = {recognition\sep machine learning\sep neural networks\sep classification\sep multilayer perceptron\sep deep learning},
 	pdfsubject  = {Recognition},
 	pdftitle    = {Pixel-wise Segmentation of Street with Neural Networks},
