abstract, ch1, ch3, ch5: Expanded abstract, removed 'we' when possible, described Theano / Lasagne

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,5 @@
 \begin{abstract}
 A \gls{CNN} was trained to segment street on a pixel basis from photographs
-taken from a drivers perspective.
+taken from a drivers perspective. This task is important for self-driving cars
+and can also support other object recognition tasks.
 \end{abstract}
