--- a/ch1-introduction.tex
+++ b/ch1-introduction.tex
@@ -6,5 +6,9 @@ autonomous driving~\cite{Tarel2009}. It can help to understand road scenes and
 reduce the space to search for lane markings. Traditionally, road segmentation
 is done with computer vision methods such as watershed
 transformation~\cite{Beucher1990}. Recent advances in deep neural networks,
-especially in computer vision, suggest that \glspl{CNN} might perform better
-on road segmentation tasks then those traditional approaches.
+especially in computer vision, suggest that \glspl{CNN} might be able to
+achieve higher classification accuracy on road segmentation tasks then those
+traditional approaches.
+
+The algorithms need to be fast (e.g. classify an image in less than \SI{0.3}{\second})
+to be applicable in self-driving cars.
